gitblit/COMPILE_ERRORS
./src/main/java/com/gitblit/git/GitblitReceivePack.java:129: error: cannot find symbol
setMaxPackSizeLimit(maxPackSz);
    ^
symbol:   method setMaxPackSizeLimit(int)
    location: class GitblitReceivePack
    Note: Some input files use or override a deprecated API.
          Note: Recompile with -Xlint:deprecation for details.
          Note: Some input files use unchecked or unsafe operations.
          Note: Recompile with -Xlint:unchecked for details.
          1 error
